--- a/_posts/2019-05-04-테스트.md
+++ b/_posts/2019-05-04-테스트.md
@@ -16,8 +16,7 @@ tags: [web, 알고리즘, node.js, mongoDB, css, canvas]
 **테스트**
 
 1. 테스트
-2. 테스트
-. 테스트
+2. 테스트 
 
 테스트
  - 테스트
@@ -28,11 +27,83 @@ tags: [web, 알고리즘, node.js, mongoDB, css, canvas]
 
 ```javascript
 console.log(1)
+function solution(food_times, k) {
+    let list = [];
+    let max = 0;
+    const length = food_times.length;
+    for(let i = 0; i < food_times.length; i++) {
+        list.push({ value: food_times[i], index: i + 1 });
+    }
+    list.sort((a, b) => a.value - b.value);
+
+    for(let i = 0; i < list.length; i++) {
+        const pass = (list.length - i) * (list[i].value - (list[i - 1] ? list[i - 1].value : 0));
+        if(k < pass) {
+            break;
+        } else {
+            max = list[i].value;
+            k = k - pass;
+        }
+    }
+
+    list = list.filter(v => (v.value - max) > 0);
+    list.sort((a, b) => a.index - b.index);
+
+    if(list.length === 0) {
+        return -1;
+    } else if (list.reduce((acc, v) => acc + v.value, 0) < k){
+        return -1;
+    }
+
+    return list[k % list.length].index;
+}
+
 ```
 
 ```c++
-int main(){
+#include <string>
+#include <vector>
+#include <algorithm>
 
+using namespace std;
+
+bool compare(pair<int, int>& a, pair<int, int>& b) {
+	return a.second < b.second;
+}
+
+int solution(vector<int> food_times, long long k) {
+
+	int answer = -1;
+	int size = food_times.size();
+
+	vector<pair<int, int>> timesAndIndex(size);
+	for (int i = 0; i < size; i++) {
+		timesAndIndex[i] = { food_times[i], i };
+	}
+	sort(timesAndIndex.begin(), timesAndIndex.end());
+
+	int row = 0;
+	int before = 0;
+	while (row < size) {
+		int time = timesAndIndex[row].first;
+		int startInd = row;
+		while (row + 1 < size && timesAndIndex[row + 1].first == time) {
+			row++;
+		}
+		int cnt = size - startInd;
+
+		if (k < (long long int)(time - before) * (long long int)cnt) {
+			sort(timesAndIndex.begin() + startInd, timesAndIndex.end(), compare);
+			answer = timesAndIndex[startInd + (k % cnt)].second + 1; 
+			break;
+		}
+
+		k -= (time - before) * cnt;
+		before = time;
+		row++;
+	}
+
+	return answer;
 }
 ```
 
@@ -40,10 +111,53 @@ int main(){
 .box{
   background: red; 
 }
+a, a:link, a:visited, a:active, a:hover {
+    color: #505050;
+    text-decoration: none;
+    font-weight: 350;
+}
+
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+    color: #1e1e1e;
+}
+
+.container-fluid {
+    width: 100%;
+}
 ```
 
 ```html
-<div></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <style>
+    .box{
+        float:left;
+        width:200px;
+        height:200px;
+        margin:10px;
+        background: blue; 
+    }   
+    </style>
+</head>
+<body>
+    <div class="wrap">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="clearBox"></div>
+    </div> 
+
+    <div class="box2"></div>
+    <div class="box2"></div>
+    <div class="box2"></div>
+</body>
+</html>
+
 ```
 
 ```python
