--- a/_posts/2019-05-04-테스트.md
+++ b/_posts/2019-05-04-테스트.md
@@ -13,7 +13,7 @@ tags: [web, 알고리즘, node.js, mongoDB, css, canvas]
 #### 테스트
 ##### 테스트 
 
-**테스트**
+아이고 이러를 수가 강조! **테스트**
 
 1. 테스트
 2. 테스트 
@@ -23,10 +23,12 @@ tags: [web, 알고리즘, node.js, mongoDB, css, canvas]
 
  > 테스트
 
- `test`
+우아아아 `test`가 말이야 이거말이야 
+
 
 ```javascript
 console.log(1)
+//룰룰ㄹ루
 function solution(food_times, k) {
     let list = [];
     let max = 0;
@@ -61,6 +63,8 @@ function solution(food_times, k) {
 ```
 
 ```c++
+//흠냐리 랄랄라 
+
 #include <string>
 #include <vector>
 #include <algorithm>
