--- a/_posts/2019-05-04-테스트.md
+++ b/_posts/2019-05-04-테스트.md
@@ -14,6 +14,7 @@ tags: [web, 알고리즘, node.js, mongoDB, css, canvas]
 ##### 테스트 
 
 아이고 이러를 수가 강조! **테스트**ㅇㅂㅇㅂ
+<img src="img/1.png" alt="hi" class="inline"/>
 
 1. 테스트
 2. 테스트 
