--- a/_posts/2019-05-07-REST-API를-구축하는-자세한-방법.md
+++ b/_posts/2019-05-07-REST-API를-구축하는-자세한-방법.md
@@ -7,8 +7,9 @@ date: 2019-05-07 06:00
 tags: [web, rest, restful, restapi]
 
 ---  
-# REST API를 구축하는 자세한 방법 
-![REST](/img/20190507_REST_1.png) 
+# REST API를 구축하는 자세한 방법  
+REST API를 구축하는 자세한 방법에 대해서 알아보겠습니다. API란 Application Programming Interface의 약어로 다른 어플리케이션에서 현재 프로그램의 기능을 이용할 수 있도록 하는 어떠한 프로그램을 뜻하는데요. 
+자원을 가져올 수 있는 하나의 문이라고 보시면 됩니다. 이 API를 통해 다른 사람에게 정보를 제공하고 싶은 부분을 열어놓거나 제한을 걸 수도 있습니다.
 
 ## REST의 정의
 웹에 있는 자원들을 HTTP를 활용하여 효율적으로 얻기위한 아키텍처스타일의 집합을 말합니다. 
