포스팅 SEO부분 수정

--- a/_posts/2019-05-16-nginx.md
+++ b/_posts/2019-05-16-nginx.md
@@ -7,6 +7,8 @@ date: 2019-05-16 07:00
 tags: [web, nginx]
 
 ---   
+nginx의 경험적인 사용법과 왜 써야 하는지를 간략히 보도록 하겠습니다. 
+
  > You just may be hacked when some yet-unknown buffer overflow is discovered. Not that that couldn't happen behind nginx, but somehow having a proxy in front makes me happy
 
 node.js를 만든 라이언달이 말했습니다. 아직 발견되지 않은 버포 오버플로우 취약점에 의해 해킹당할 수 있으니 nginx를 proxy서버 앞단에 두는 것이 좋다고 생각한다는 말입니다. 
