말투 좀 수정

--- a/_posts/2019-05-17-hoisting.md
+++ b/_posts/2019-05-17-hoisting.md
@@ -13,11 +13,11 @@ tags: [web, 호이스팅, 자바스크립트]
 
 > 스코프 : 변수, 매개변수의 접근성, 생존기간을 말합니다. 
 
-`var`로 선언하면 선언 & 초기화가 동시에 일어나기 때문에 `undefined`로 접근할 수 있지만
-const / let으로 선언하게 되면 TDZ가 막기 때문에 Reference Error로 호이스팅이 일어나지만 호이스팅을 막을 수 있습니다. 
+`var`로 선언하면 선언 & 초기화가 동시에 일어나기 때문에 `undefined`로 초기화가 되어 그 값으로 참조할 수 있지만
+`const / let`으로 선언하게 되면 TDZ가 막기 때문에 Reference Error로 호이스팅이 일어나지만 호이스팅을 막을 수 있습니다. 
 
 ## 스코프
-지역스코프와 전역 스코프로 나눠딥니다. 함수밖이나 {}(블록스코프)밖은 모두 전역스코프라고 부르며 그 외는 지역스코프라고 부릅니다. 
+지역스코프와 전역 스코프로 나눠집니다. 함수밖이나 {}(블록스코프)밖은 모두 전역스코프라고 부르며 그 외는 지역스코프라고 부릅니다. 
 이는 브라우저에만 속한 설명이며 node.js안에서는 다릅니다. 
 
  > node.js안에서의 전역스코프는 global이라는 변수에 할당해서 씁니다.   
@@ -27,7 +27,7 @@ const / let으로 선언하게 되면 TDZ가 막기 때문에 Reference Error로
 함수의 코드 블록만을 스코프로 인정합니다. 따라서 전역 함수 외부에서 생성한 변수는 모두 전역 변수이다.  
 참고로 for 문의 변수 선언문에서 선언한 변수(var로 선언한)를 for 문의 코드 블록 외부에서 참조할 수 있다.  
 
-### 블록 레벨 레벨 스코프(Function-level scope)
+### 블록 레벨 레벨 스코프(Block-level scope)
 {} 중괄호 코드 블록만을 스코프로 인정합니다. let, const로 선언된 변수는 이 스코프를 따릅니다.  
 
 ## 변수 호이스팅
@@ -43,7 +43,10 @@ const / let으로 선언하게 되면 TDZ가 막기 때문에 Reference Error로
  ```
 
 ## 함수 호이스팅
-자바스크립트는 선언만 호이스팅이 되고 할당, 초기화는 호이스팅이 되지 않습니다. 
+자바스크립트는 선언만 호이스팅이 되고 할당, 표현식은 호이스팅이 되지 않습니다. 
+변수호이스팅은 그저 초기화가 되어 참조할 수 있는게 특징이라면 함수는 실행까지 할 수 있는게 차이점입니다.
+
+호이스팅은 이러한 버그를 양산합니다.
 ```js
 var arr = [1, 2, 3, 4]
 function a(){
@@ -61,16 +64,36 @@ console.log(a())
 //10
 //[ 10, 2, 3, 4 ]
 ```
+
+하지만 코드를 짤 때 
+1. 비즈니스로직
+2. 함수설정
+
+을 해서 비즈니스로직에 집중되게끔하는 측면에서는 장점을 보입니다. 
+
 반복문 안의 루프 카운터 i가 호이스팅이 되어 내부함수 b의 클로저에 포함이 됩니다. 이 때 i를 변경해서 루프카운터까지 변경되게 되어서
 꼬이게 됩니다.  
   
-ES6는 위에 처럼 함수래벨 스코프에서 일어나는 현상들을 방지하기 위해 즉, var 키워드의 단점을 보완하기 위해 let과 const 키워드를 도입하였습니다. 
+ES6는 위에 처럼 함수레벨 스코프에서 일어나는 현상들을 방지하기 위해 즉, var 키워드로 일어나는 단점을 보완하기 위해 let과 const 키워드를 도입하였습니다. 
 다시 말하지만 호이스팅은 되지만 블록스코프 / 선언과 초기화를 분리하는 TDZ(Temporal Dead Zone)로 함수레벨스코프 단계에서 일어나는 호이스팅으로 일어나는 버그들을 막는 것입니다.  
 
 `let, const` 키워드로 선언된 변수는 선언 단계와 초기화 단계가 분리되어 진행됩니다. 
 
-즉, 스코프에 변수를 등록(선언단계)하지만 초기화 단계는 변수 선언문에 도달했을 때 이루어집니다. 초기화 이전에 변수에 접근하려고 하면 참조 에러(ReferenceError)가 발생한다. 이는 변수가 아직 초기화되지 않았기 때문이며 다시 말하면 변수를 위한 메모리 공간이 아직 확보되지 않았기 때문입니다. 
+즉, 스코프에 변수를 등록(선언단계)하지만 초기화 단계는 변수 선언문에 도달했을 때 이루어집니다. 초기화 이전에 변수에 접근하려고 하면 참조 에러(ReferenceError)가 발생합니다.
 
-즉, var은 선언 & 초기화 > 할당이고 let, const는 선언 > [TDZ] >  초기화 > 할당 인 셈입니다.
+이는 변수가 아직 초기화되지 않았기 때문이며 다시 말하면 변수를 위한 메모리 공간이 아직 확보되지 않았기 때문입니다. 
 
- > 태그 : 호이스팅
+정리하자면 다음과 같습니다. var, let, const 모두 호이스팅이 일어나지만
+### var 
+1. 선언 & 초기화
+2. 할당
+
+### let, const
+1. 선언
+2. TDZ
+3. 초기화
+4. 할당
+인 셈입니다. 
+ 
+
+ > 태그 : 호이스팅, let, const
