남탓하지말자. ㅠ

--- a/_posts/2019-05-07-REST-API.md
+++ b/_posts/2019-05-07-REST-API.md
@@ -7,10 +7,13 @@ date: 2019-05-07 06:00
 tags: [web, rest, restful, restapi]
 
 ---   
-REST API를 구축하는 자세한 방법에 대해서 알아보겠습니다. API는 Application Programming Interface의 약어로 다른 어플리케이션에서 현재 프로그램의 기능을 이용할 수 있도록 하는 어떠한 프로그램이자 자원을 가져올 수 있는 하나의 문입니다. 이 API를 통해 어떤 정보를 모두 제공하거나 제한해서 제공할 수도 있습니다.  
+REST API를 구축하는 자세한 방법에 대해서 알아보겠습니다. 
+
+API는 Application Programming Interface의 약어로 다른 어플리케이션에서 현재 프로그램의 기능을 이용할 수 있도록 하는 어떠한 프로그램이자 자원을 가져올 수 있는 하나의 문입니다. 이 API를 통해 어떤 정보를 모두 제공하거나 제한해서 제공할 수도 있습니다.  
 
 ## REST의 정의
 웹에 있는 자원들을 HTTP를 활용하여 효율적으로 얻기위한 아키텍처스타일의 집합을 말합니다. 
+
 기본적으로 웹에 있는 자원들은 URI라는 규칙에 따라 정의되어있고 정한 방법에 따라 그 자원들을 얻거나 수정할 수 있는데 이렇게 얻거나 수정하는 방법들을 좀 더 효율적으로 구현할 수는 없을까 고민이 담긴 집합이며 이를 잘 지킨 아키텍처를 **RESTful하다**라고 합니다.
  
 ### 아키텍처 규칙
