몇개의 글 수정

--- a/_posts/2019-05-27-security.md
+++ b/_posts/2019-05-27-security.md
@@ -61,5 +61,15 @@ OWASP에 따라 프로젝트를 다시한번 확인하는 것이 좋습니다.
 ## 10. HTTP 헤더 설정
 1) x-frame-options, 2) x-xss-protection 3) x-content-options 4) content-security-policy 를 설정(node.js에서는 helmet을 통해 쉽게 설정가능) 
 
+## 11. HTTP 응답분할방지
+파라미터를 필터하면 됨. 원래의 응답을 종료시키고 악의적인 악성코드 실행 방지
+
+## 12. 취약한 비밀번호 허용방지
+ 
+
+## 14. 취약한 API 방지 
+DNS Lookup에 의존해서 호스트 이름을 비교하지 않고 IP 주소를 직접 비교해야 한다.  
+
+참고 : [KISA개발보안가이드](http://www.kisa.or.kr/uploadfile/201702/201702140920275581.pdf)
 
  > 태그 : web, 개발보안,자바스크립트
