--- a/_posts/2019-05-27-vuejs.md
+++ b/_posts/2019-05-27-vuejs.md
@@ -8,6 +8,10 @@ tags: [web, vuejs, 자바스크립트]
 
 ---  
 # Vue.js
+ - [기본가이드](https://vuejs.org/v2/guide/)
+ - [DEEPDIVE](https://medium.com/@oneminutejs/a-deep-dive-in-the-vue-js-source-code-0-table-of-contents-170dcc3c8ec)
+
+Vue.js는 정말 기본가이드가 잘되어 있어서 이것만 참고해도 됩니다. 
 
 ## SPA 
 Vue.js는 기본적으로 단일 페이지 애플리케이션(Single Page Application, SPA)를 가지고 있습니다. 
