함수형 프로그래밍 수정

--- a/_posts/2019-05-21-promise.md
+++ b/_posts/2019-05-21-promise.md
@@ -51,7 +51,7 @@ async1(1)
 catch는 resolve든 reject는 모든 오류를 처리할 수 있습니다.  
 또한 catch는 체인에서 개별적인 단계의 로직을 짤 때 유용합니다. 프라미스 거부는 거부 콜백(또는 동일하게 기능하는 catch())을 사용하여 다음 then()으로 건너뜁니다. then(func1, func2)를 사용하는 경우 func1와 func2 중에 하나만 호출되며, 둘이 동시에 호출되지 않습니다. 그러나 then(func1).catch(func2)를 사용하는 경우 둘은 체인에서 개별적인 단계이므로 func1이 거부되면 둘 다 호출됩니다.  
 
-rejected를 활용한 오류 분기점시의 로직 구현
+### rejected를 활용한 오류 분기점시의 로직 구현
 ```js
 (resolve, reject)=>{
   $.get(_, function(res){
@@ -115,4 +115,9 @@ const log = x => console.log(x)
 
 fg('{"temp":36.5}').catch(_ => 'JSON PARSE is not working').then(log)
 ```
+참고로 Promise는 중첩이 되더라도 마지막 로직을 then으로 받을 수 있습니다. 
+`P(P(P)).then(a => log)`로도 할 수 있다는 것이죠.
+
+이렇게 Promise를 알아보았습니다. 
+
  > 태그 : promise, 모나드, 콜백, javascript, web
