--- a/기상정보지원체계.md
+++ b/기상정보지원체계.md
@@ -1,7 +1,6 @@
 
 ![공군로고](https://kmug.co.kr/data/file/design/data_logo_airforce_mil_kr.jpg) 
-# 기상정보지원체계 
-기상정보지원체계란?
+# 기상정보지원체계  
 
 비행작전 전후에 사령관 등이 예보관들이 입력한 정보, 기상데이터 등을 볼 수 있는 비행작전지원체계, 총 42개의 화면으로 구성되어있으며 기상데이터 입력 및 업로드, 센서장비값 및 상태 확인, HA, 차트, 풍배도 데이터시각화를 한 것이 특징입니다.  
 
@@ -20,23 +19,30 @@
 
 ## 기술
 고가용성(RedHat HA) / Vue.js / Vue-cli / Vuex / D3.js / Node.js / MongoDB / Mongoose / Nginx / Express / Socket.io / request / Axios  
+
+### 관리자화면
 ![관리자화면](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/portfolio/1.jpg) 
 
 계룡, 청주, 서산 등 전 비행단에 맞는 사진으로 커스터마이징된 느낌을 주었으며 풍속, 운고 등 기상데이타 요소를 각 비행단에서 자주보는 요소들의 단위로 변경할 수 있게 했으며 밤에 더 잘보이는 다크모드 또는 기본모드를 준비해 애플리케이션  자체의 테마를 조정할 수 있게 설계했습니다. 
 화면을 열었을 때 한눈에 센서의 상태들이 표시가 되며 이용되는 사용자목록, 그리고 계룡의 기상상태가 보이게 구축했습니다.
 
+### 풍배도
 ![풍배도](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/portfolio/2.jpg) 
 
 시각적으로 바람의 강도, 방향이 잘 보이게 만든 컴포넌트입니다. 센서데이타에 메모이제이션을 적용해 서버에 요청을 최소화했으며 재사용가능한 컴포넌트로 제작했습니다. 
 
+
+### 관리자화면-업로드
 ![관리자화면-업로드](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/portfolio/2_2.jpg) 
 
 관리자의 편의에 따라 수동, 자동 버전으로 변환되고 거기에 따라 모든 단말기가 수동, 자동버전으로 바뀝니다. 드래그 앤 드랍으로 업로드가 가능하게끔 설계해서 UX를 높였습니다.  
 
+### 차트
 ![차트](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/portfolio/3.jpg)
 
 시각적으로 기상데이터를 시계열화해서 보여줍니다. 센서데이타에 메모이제이션을 적용해 서버에 요청을 최소화했으며 재사용가능한 컴포넌트로 제작했습니다. 
 
+### 작전화면
 ![작전](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/portfolio/11.jpg) 
 
 작전적인 화면을 한눈에 보여줍니다. SVG로 제작을 해서 깨지지 않으며 관리자가 설정한 메인서브, 활주로 방향요소에 따라 비행기, 활주로방향이 다이나믹하게 변경되며 거기에 따른 요소정보들도 바뀝니다. 
