--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -17,21 +17,14 @@ excerpt: MEVN교과서 (1)
 
 아울러 모든 코드들은 https://github.com/wnghdcjfe/MEVN 를 통해 다운 받을 수 있으므로 참고하시길 바랍니다.
 
-# 독자 대상
-이 책을 보려면 다음 기술에 대한 기본 지식이 있어야 합니다.
- - HTML5
- - 자바스크립트
- - CSS
-
-이 3가지 기술을 어느 정도 학습하신 후에 이 책을 볼 것을 권장합니다. 참고로 윤인성의 모던 웹 디자인을 위한 HTML5 + CSS3 입문, 모던 웹을 위한 Javascript + jQuery 입문을 기초로 볼 것을 권장해 드리며 그 책을 다 본 후, 자바스크립트 Info, https://javascript.info/, 포이마웹, https://poiemaweb.com/, 큰돌의 터전, https://kundol.kr/ & https://jhc9639.blog.me/ 을 보면서 공부할 것을 권장합니다.
-
 # 독자대상
 이 책을 보려면 다음 기술에 대한 기본 지식이 있어야 합니다. 
  - HTML5
  - 자바스크립트
  - CSS 
 
-이 3가지 기술을 어느정도 학습하신 후에 이 책을 볼 것을 권장합니다. 참고로 윤인성의 모던웹 디자인을 위한 HTML5 + CSS3 입문, 모던웹을 위한 Javascript + JQeury 입문을 기초로 볼 것을 권장드리며 그 책을 다 본 후, 자바스크립트Info, https://javascript.info/, 포이마웹, https://poiemaweb.com/, 큰돌의 터전, https://kundol.kr/ & https://jhc9639.blog.me/ 을 보면서 공부할 것을 권장드립니다. 
+위 3가지 기본기술을 쌓는데 도움을 주는 책으로는 **윤인성의 모던웹 디자인을 위한 HTML5 + CSS3 입문**, **모던웹을 위한 Javascript + JQeury 입문**을 추천드리며 웹사이트로는 자바스크립트Info, https://javascript.info/, 포이마웹, https://poiemaweb.com/, 큰돌의 터전, https://kundol.kr/ 을 추천드립니다. 
+
 
 # 목차
 ## 1. 준비하기
@@ -42,10 +35,8 @@ excerpt: MEVN교과서 (1)
 
 ## 2. MEVN
 ### 2.1 Node.js
-- Node.js의 기본
-- express.js의 기본
-- Pm2 라이브러리 설정
-- forever 라이브러리 설정
+- Node.js의 기본 
+- Pm2 라이브러리 설정 
 
 ### 2.2. Express
 - Express의 구조
