빅데이터 공모전 수정

--- a/_posts/2019-06-30-MEVN교과서-(3).md
+++ b/_posts/2019-06-30-MEVN교과서-(3).md
@@ -9,6 +9,9 @@ sitemap: yes
 excerpt: MEVN교과서 (3)
 
 ---   
+
+![MEVN교과서](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/mevnlogo.jpg)
+
 # 2. MEVN
 MEVN은 MongoDB, Express.js, Vue.js 그리고 Node.js를 이용해서 만드는 웹 어플리케이션입니다. MEVN스택이라고 불립니다. 
 
@@ -134,10 +137,10 @@ pm2 start simple_pm2.js
 ```
 
 구동이 된 후 `pm2 list` 를 통해 깔끔한 UI로 어떠한 앱이 실행되었나 보여주며 cpu, 메모리 사용량 등을 볼 수 있습니다. 
-![pm2 list화면](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/plan/img/pm2_list.PNG) 
+![pm2 list화면](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/pm2_list.PNG) 
 
 한 앱에 대한 실시간 모니터링은  `pm2 monit`를 치면 다음과 같은 화면이 나오면서 할 수 있습니다. 
-![pm2 monit화면](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/plan/img/pm2_monit.PNG) 
+![pm2 monit화면](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/pm2_monit.PNG) 
 
 종료나 pm2 관리하는 list에서 삭제는 다음과 같은 명령어로 할 수 있습니다. 
 ```js 
@@ -152,7 +155,7 @@ pm2 delte 0
 ```
 
 이외에도 pm2 monitoring 이라는 명령어를 사용하고 회원가입, 로그인을 하면 특정 웹애플리케이션이 띄워지고 그 안에서 CPU사용량, 메모리, HTTP로그, 이벤트 루프, 사용되는 Heap Size 등을 더 아름답게 확인할 수 있습니다. 하지만 이는 Free-trial버전으로 2주간 무료이며 그 이후에는 유료로 쓸 수 있습니다. 
-![pm2 monit화면](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/plan/img/pm2_monitoringUI.PNG) 
+![pm2 monit화면](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/pm2_monitoringUI.PNG) 
 
 단순히 자동적으로 서버 재시작이 가능하고 `pm2 monit`을 통해 왠만한 모니터링을 할 수 있으며 클러스터링또한 가능하다는 점에서 pm2는 안전한 서버구동에 있어 좋은 선택입니다. 
 
