--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -10,6 +10,9 @@ excerpt: MEVN교과서 (1)
 
 ---  
 
+
+![MEVN교과서](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/mevnlogo.jpg) 
+
 # 지은이의 말
 이 책에는 이러한 내용이 중점적으로 있습니다. Vue.js, D3.js, Node.js 그리고 MongoDB를 이용해 웹앱을 만드는 방법을 살펴봅니다. REST API와 실시간 통신, D3.js를 이용한 시각화 방법, 메시지큐, 로그처리, UX자동화, 크로스 브라우징까지 알아보게 될 것입니다.
 
