--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -42,8 +42,9 @@ excerpt: MEVN교과서 (1)
 - Pm2 라이브러리 설정 
 
 ### 2.2. Express
-- Express의 구조
-- Express로 만드는 미들웨어 
+ - HTTP 요청에 응답하는 **미들웨어** 설정가능
+ - HTTP 메소드, URL 기반으로 하는 라우팅설정  
+ - 쉬운 서버구동 
 
 ### 2.3. Vue.js
 - SPA와 Vue.js 
