--- a/_posts/2019-06-30-MEVN교과서-(3).md
+++ b/_posts/2019-06-30-MEVN교과서-(3).md
@@ -156,15 +156,99 @@ pm2 delte 0
 이외에도 pm2 monitoring 이라는 명령어를 사용하고 회원가입, 로그인을 하면 특정 웹애플리케이션이 띄워지고 그 안에서 CPU사용량, 메모리, HTTP로그, 이벤트 루프, 사용되는 Heap Size 등을 더 아름답게 확인할 수 있습니다. 하지만 이는 Free-trial버전으로 2주간 무료이며 그 이후에는 유료로 쓸 수 있습니다. 
 ![pm2 monit화면](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/pm2_monitoringUI.PNG) 
 
-단순히 자동적으로 서버 재시작이 가능하고 `pm2 monit`을 통해 왠만한 모니터링을 할 수 있으며 클러스터링또한 가능하다는 점에서 pm2는 안전한 서버구동에 있어 좋은 선택입니다. 
+단순히 자동적으로 서버 재시작이 가능하고 `pm2 monit`을 통해 왠만한 모니터링을 할 수 있으며 클러스터링또한 가능하다는 점에서 pm2는 안전한 서버구동에 있어 좋은 선택입니다. 또한 애러가 생기면 등록된 이메일로 애러가 생겼다. 서버가 죽었다. 알림메세지까지 주니 관리측면에서 아주 좋습니다.
 
-물론 서버가 안 죽게 만들어야 하는 것은 필수입니다.  
+ > 물론 서버가 안 죽게 만들어야 하는 것은 필수입니다.  
 
- 
 
 ## 2.2. Express
-- Express의 구조
-- Express로 만드는 미들웨어 
+node.js 에서 동작하는 웹개발 프레임 워크 중 많이 쓰이는 유연한 프레임워크입니다.  
+핵심기술로는 이 3가지가 핵심기술입니다.  
+
+1. HTTP 요청에 응답하는 **미들웨어** 설정가능
+2. HTTP 메소드, URL 기반으로 하는 라우팅설정  
+3. 쉬운 서버구동
+
+이 있습니다. 이외에도 Jade란 템플릿을 통해 쉽게 웹페이지를 생성할 수 있지만 이 책에서는 사용하지 않으므로 설명을 하지 않습니다.
+
+ > 라우팅 : 클라이언트가 요청 및 요청 예정되는 경로를 설정하는 작업
+ > 미들웨어 : 중간에 껴놓은 소프트웨어, 부가적인 처리, 기능 을 담당
+
+## 2.2.1. HTTP 요청에 응답하는 미들웨어 설정가능
+```js
+const app = express();
+
+// --- 1번로직
+
+app.use((req, res, next)=>{ // -- use를 통해 중간에 미들웨어를 설정할 수 있습니다 .
+  console.log('Time:', Date.now());
+  next();
+});
+
+// --- 2번 로직
+```
+이렇게 1번과 2번 로직 사이에 끼어놓는 로직을 미들웨어라고 합니다. `use`를 통해 미들웨어가 모든 요청에 대해 미들웨어를 추가했습니다. `app.get` 등을 이용해 특정한 HTTP 요청을 다루는 것이 아닌 use를 통해 모든 요청을 처리할 수 있습니다. 
+
+모든 요청에 대해 중간에 거는 미들웨어를 추가하는 것입니다. 이를 이용하면 이런게 가능합니다. 
+```JS
+var logger = require('morgan');
+app.use(logger('tiny'));
+```
+이렇게 morgan이라는 로그 시스템 라이브러리를 놓게 되면 모든 요청에 대한 로그를 쉽게 파악할 수 있습니다. 
+
+
+## 2.2.2. HTTP 메소드, URL 기반으로 하는 라우팅설정  
+말그대로 라우팅설정입니다. URL인 users/dad/books/dad의 요청을 req.params로 받아서 쉽게 처리할 수 있습니다. get이라는 요청을 처리했는데 이와 동시로 다른 요청또한 처리할 수 있습니다. 
+```js
+app.get('/users/:userId/books/:bookId', function (req, res) {
+  res.send(req.params)
+})
+// users/dad/books/dad 요청시
+//{"userId":"dad","bookId":"dad"}
+```
+/book이라는 url의 get, post, put 요청을 처리하는 함수
+```js
+app.route('/book')
+  .get(function (req, res) {
+    res.send('Get a random book')
+  })
+  .post(function (req, res) {
+    res.send('Add a book')
+  })
+  .put(function (req, res) {
+    res.send('Update the book')
+  })
+```
+
+## 2.2.3. 쉬운 서버구동
+`app.listen(12010)` 만으로 쉽게 서버를 구축할 수 있습니다. 예제 코드입니다. 
+
+ > 항상 이렇게 app이라는 객체에 담아서 로직을 짜는 것이 중요합니다. 
+
+
+### 2장 simple_express.js
+```js
+const express = require('express');
+const path = require('path')
+const app = express();
+const _path = path.join(__dirname, './dist')
+console.log(_path)
+app.use('/dist', express.static(_path)) // 정적 컨텐츠를 사용자에게 제공할 때 사용되는 메서드입니다. 특정 path에 해당하는 자료들을 사용자가 접근가능하게끔합니다.
+app.listen(12010, ()=> {
+  console.log('너의 서버는? 12010!');
+});
+``` 
+/dist라는 요청을 받았을 때 dist폴더의 index.html을 보여주는 서버를 만들었습니다.
+`__dirname`은 JS가 실행되는 현재 위치를 가리키는 Node.js의 전역 변수입니다. path.join을 사용해서 현재 서버를 구동한 위치로부터의 dist폴더를 제공한다라는 것을 아름답게 만들수 있습니다.
+
+이렇게 서버를 구동한 후, http://127.0.0.1:12010/dist 에 가보면 아름다운 제 처음 서버가 완성됩니다. 그렇다면 /test서버에 제 index.html을 보기 위해서는 어떤 코드를 수정해야 할까요? 생각해보세요.
+
+
+![2_simple_server](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/2_simple_server.PNG) 
+
+
+
+
 
 ## 2.3. Vue.js
 - SPA와 Vue.js 
