--- a/_posts/2019-06-30-MEVN교과서-(2).md
+++ b/_posts/2019-06-30-MEVN교과서-(2).md
@@ -23,18 +23,20 @@ VS Code는 마이크로소프트에서 개발되었으며 윈도우, macOS, Linu
 
 ### 1.1.1 개발환경구축
 저는 Dracula Official 테마와 VS ICON 테마를 좋아하며 폰트로는 D2 Coding 폰트를 사용합니다. 설정 방법도 간단합니다. 
-![그림1_1](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/1_테마설치.PNG)
+![테마설치](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/1_테마설치.PNG)
 1. 마켓플레이스에서 Dracula Official을 선택해서 다운받습니다. 
 2. `f1`을 누른 후 dracula 를쳐서 테마를 설정합니다. 
 
-![그림1_1](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/1_테마.PNG)
+![테마설정](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/1_테마.png)
 이처럼 색테마, 아이콘 테마도 위와 똑같이 설정할 수 있습니다. 
 
-![그림1_1](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/1_폰트.PNG)   
+![폰트설정](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/1_폰트.PNG)   
 폰트는 D2Coding폰트를 다운 받은 후 파일 >  기본설정 > 설정에 들어가서 D2Coding 폰트를 설정하면 됩니다. 
 
 ### 1.1.2 확장도구 설정
-VS CODE는 많은 확장도구가 장점입니다. 마켓플레이스에서 사용하고 싶은 확장도구들을 설치합시다. 저는 주로 3가지의 확장도구를 사용합니다. 
+VS CODE는 많은 확장도구들이 장점입니다. 마켓플레이스에서 사용하고 싶은 확장도구들을 설치합시다. 
+
+저는 주로 3가지의 확장도구를 사용합니다. 
  - 코드를 아름답게 배치해주는 Beautify
  - 색깔을 쉽게 파악할 수 있는 Color Highlight
  - HTML 태그들을 쉽게 생성할 수 있는 HTML Snippets  
