--- a/_posts/2019-06-30-MEVN교과서-(3).md
+++ b/_posts/2019-06-30-MEVN교과서-(3).md
@@ -299,9 +299,38 @@ SPA는 서버 렌더링 방식이 아닌 자바스크립트 기반 비동기 모
 
 ### 2.3.4 Vue-cli 설정
 자 이제 Vue.js를 이용한 프로젝트를 구축해보도록 하겠습니다.  
+먼저 Vue-cli를 설치합니다.`npm install -g @vue/cli-init`
 
-- Vue-cli 설정
-- Webpack 구조
+`vue create sensor` 을 통해 프로젝트를 생성합니다. 
+![vuecli셋팅](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/2_vuecli.PNG) 
+이렇게 셋팅합니다. 
+
+이렇게 설정한 후 sensor폴더에 들어가 README.md를 봅니다. 
+`npm install` 로 의존성 라이브러리를 모두 다운받은 후 `npm run serve`로 개발환경을 실행할 수 있고 `npm run build`로 빌드를 할 수 있습니다. 
+`npm install` 후 `npm run serve`로 개발환경을 실행시킵니다. 
+
+![시작되는화면](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/2_vue-cli-start.PNG) 
+
+자 처음으로 Vue-cli로 만들어진 앱이 탄생했습니다! 이제 이걸로 개발을 하면 됩니다. 
+
+### 2.3.5 Webpack 구조
+
+![webpack](https://raw.githubusercontent.com/wnghdcjfe/wnghdcjfe.github.io/master/MEVN/2_webpack.PNG) 
+자 이제 들어가기 앞서 우리가 했던 것이 뭔지를 알아보도록 하겠습니다. 우리는 Vue-cli와 Webpack이라는 것을 이용해서 테스트 개발환경을 구축했습니다. 이렇게 하면 Vue로 모듈적으로 개발을 하고 빌드할 때는 html, js, css **정적파일**로 번들이 되어 나오게 됩니다.
+
+Webpack이란 웹에서 사용되는 모든 자원(html, js, css, vue, img) 등을 번들링 해주는 도구입니다. 번들링이란 여러개의 파일들을 하나의 파일로 묶는 포장작업을 의미합니다. 
+
+이를 활용하면 개발할 때는 여러개의 모듈로 개발을 해서 쉽게 개발을 하다가 배포할 때는 하나의 파일로 최적화를 시켜서 배포를 할 수 있습니다. 
+
+Gulp나 Grunt도 이러한 포장작업 도구들이지만 Webpack이 제일 좋습니다.
+
+웹에는 Vue라는 확장자가 있을 수 없습니다. 우리가 볼 수 있는 화면들은 죄다 html, js, css로 이루어져 있습니다. vue라는 확장자는 없죠. 하지만 개발을 할 때는 편리하게 vue라는 도구를 쓰고 그 다음 배포할 때 우리가 볼 수 있는 html, js, css로 확장자를 바꿔서 제공하는 것이죠. 
+
+이를 번들이라고 하는데 하나의 js, css파일을 만들어서 네트워크요청을 최소화하는 것이 특징입니다. 
+
+만약 webpack에서 번들 또는 테스트환경을 설정할 때 커스터마이징이 필요하다면 Vue-cli2를 사용하는 것이 좋습니다. 물론 Vue-cli3에서도 커스터마이징을 제공하지만 완전한 커스터마이징을 제공하지 않습니다. 
+
+어떤 명령에 따라 어떤 파일을 넣고 바꾸고 webpack 을 통해 번들한다면 vue-cli2를 이용하는 것이 좋습니다. 
 
 ## 2.4. MongoDB
 - MongoDB의 구조
