힘내어 계획을 수립했다.

--- a/면접준비/질문사항.md
+++ b/면접준비/질문사항.md
@@ -30,10 +30,18 @@
 7. 이를 바탕으로 Client와 소켓연결, 데이타를 클라이언트로 전송하여 실시간 모니터링을 구현합니다. 
 
 ### Q. 프로젝트 진행시 가장 중요시 여겼던 부분은?
-요구사항, 성능 그리고 유지보수성입니다. 일단 요구사항이 제일 중요합니다. 효율적인 회의와 상대방이 무엇을 원하는지 상세히 조금 더 상세히 알 필요가 있습니다. 운동화끈을 묶을 때 처음 묶는 끈이 가장 중요하듯 개발에 있어서는 요구사항을 제대로 정립하는 것이 제일 중요합니다. 그리고 그 다음은 성능입니다. 성능은 3가지로 이루어집니다. 어떤 것을 쓰느냐, 얼마나 선언하느냐, 어떻게 구성하느냐.입니다. 예를 들어 정수형으로 바꿔야 할 것이 있습니다. 대표적인 자바스크립트의 메소드는 parseInt가 있습니다. 하지만 물결표시 비트 연산자 2번을 쓰면 똑같이 정수형으로 만들 수 있습니다. (비트연산자의 결과는 정수형입니다. 이는 자바, 자바스크립트 모두 다 그렇습니다.)
-또한, new Date같은 객체를 여러번 쓰는 것보다 조금 쓰는 것이 좋습니다. 그리고 시간복잡도와 공간복잡도를 줄이는 것이 중요합니다. 이미지 리스트를 추출하는 로직에서 시간복잡도가 n * m 이였는데 이를 피벗알고리즘을 적용하여 n 으로 줄였습니다. 
-이렇게 해서 성능을 올릴 수가 있습니다. 그리고 유지보수성입니다. 유지보수성을 올리기위해서는 모듈화는 기본이며 명료하게 짜야 합니다. 저는 특히 자바스크립트로 만드는 프로젝트라면 함수형 프로그래밍 패러다임을 선택해야 한다고 생각합니다. 전역변수를 최소화시키고 부수효과를 최소화하며 그리고 작은 함수들로 구성된 로직은 정말 유지보수하기가 쉽습니다. 그리고 지연평가를 통해 성능을 향상시킬 수 있으며 동시성처리에 해당하는 것도 쉽게 만들 수가 있고 애러처리의 경우도 하나의 로직에서 벗어나지 않고 잘 만들 수가 있습니다.  
-이런식으로 성능과 유지보수성을 꼼꼼히 신경쓰면서 개발에 임해왔습니다. 
+요구사항, 성능 그리고 유지보수성입니다. 일단 요구사항이 제일 중요합니다. 효율적인 회의와 상대방이 무엇을 원하는지 상세히 조금 더 상세히 알 필요가 있습니다. 운동화끈을 묶을 때 처음 묶는 끈이 가장 중요하듯 개발에 있어서는 요구사항을 제대로 정립하는 것이 제일 중요합니다. 개발자는 기획자와의 소통은 물론이며 친근함까지도 필요합니다. 그렇게 해야 완벽한 요구사항을 만들어낼 수 있습니다. 
+
+그리고 그 다음은 성능입니다. 성능은 3가지로 이루어집니다. 어떤 것을 쓰느냐, 얼마나 선언하느냐, 어떻게 구성하느냐.입니다. 
+1. 어떤것을 쓰느냐. 예를 들어 정수형으로 바꿔야 할 것이 있습니다. 대표적인 자바스크립트의 메소드는 parseInt가 있습니다. 하지만 물결표시 비트 연산자 2번을 쓰면 똑같이 정수형으로 만들 수 있습니다. (비트연산자의 결과는 정수형입니다. 이는 자바, 자바스크립트 모두 다 그렇습니다.)
+2. 얼마나 선언하느냐. new Date같은 객체를 여러번 쓰는 것보다 조금 쓰는 것이 좋습니다. 이외에도 불필요한 객체선언으로 인한 메모리낭비는 없어야 합니다. 
+3. 어떻게 구성하느냐. 이는 시간복잡도와 공간복잡도를 줄이는 것이 말합니다. 저는 원격통합표출체계 프로젝트에서 이미지 리스트를 추출하는 로직에서 시간복잡도가 n * m 이였는데 이를 피벗알고리즘을 적용하여 n 으로 줄인 사례와 기상정보지원체계 개발당시 메모이제이션을 이용해 서버요청을 85%이상 줄인 사례가 있습니다. 
+이런식으로 성능을 올릴 수가 있습니다. 
+
+마지막으로 유지보수성입니다. 유지보수성을 올리기위해서는 모듈화는 기본이며 간단하고 명료하게 짜야 합니다. 그리고 팀워들끼리 어떻게 짜야 할 것인지를 통일하는 것이 중요합니다. 예를 들어 vue.js의 shortcut 메서드를 쓸 것인지 아닌지, margin : 0 px 는 margin: 0으로 쓸 것인지 아닌지, flex를 어느 부분에 쓸건지 등을 정확히 정하는 것이 추후 유지보수성을 증대시킬 수 있습니다. 프로그래머마다 다양한 코드스타일이 있지만 프로젝트를 할 때 어느정도는 통일을 시켜야합니다.  
+또한 저는 특히 자바스크립트로 만드는 프로젝트라면 함수형 프로그래밍 패러다임을 기본으로 개발할 것을 추천합니다.  함수형프로그래밍은 전역변수를 최소화시키고 부수효과를 최소화하며 그리고 작은 함수들로 구성된 로직이 기본입니다. 이러한 것들은 유지보수성을 증대시킵니다. 아무리 복잡한 로직이라고 작은 로직들로 이루어진다면 추후 요구사항에 대해 빠르게 대처할 수 있습니다. 그리고 함수형프로그래밍의 지연평가를 통해 성능을 향상시킬 수 있으며 동시성처리에 해당하는 것도 쉽게 만들 수가 있고 다형성을 통해 재사용성을 높일 수 있으며 null, undefined처리도 쉽게 할 수 있습니다. 
+
+이 3가지가 저의 개발철학이며 개발시 꼭 지켜야 한다고 생각하는 것들입니다.  
  
 ### Q. 기술적인 도전은 뭐했어?
 2017년 3월, 처음 기상정보지원체계를 개발할 당시 아키텍처를 설계하는 일이였습니다. 클라이언트 프레임워크를 선택할 때 당시 React, Angular의 양대산맥구조로 이루어져있었고 Vue.js는 뜨고 있는 상황이였고 인지도도 없었습니다. 좀 더 정확한 결정을 위해서 일주일만에 그 상황에서 그 3가지로 간단한 소개 웹앱을 다 만들어 러닝커브, 성능, 초기구축 어떤게 좋았나 고민을 했고 Vue.js를 도입해 성공적으로 잘 만들게 되었습니다.  
@@ -263,3 +271,13 @@ data consistency를 유지해야 하기 때문입니다.
 
 
 ### Q. 마이크로 아키텍처
+
+
+### Q. 자신있는 개발 언어와 해당 언어 관련 가장 성공적인 경험을 설명해주시고, 프레임웍 사용 경험이 있으신지 알려주세요.
+가장 자신있는 개발언어는 자바스크립트입니다. 자바스크립트만으로 구성된 MEVN 스택, MongoDB, Express.js, Vue.js, Node.js 그리고 시각화 라이브러리인 D3.js 그리고 데이타 포맷은 JSON으로 통일하여 만든 기상정보지원체계 경험이 제 가장 큰 성공적인 경험입니다. 그 때 당시에는 Vue.js와 React.js, Angular.js가 있었고 Vue.js는 나온지 얼마 되지 않았었습니다. 처음 어떤 스택으로 개발할건지를 결정하는 것이 중요했을 때 그 3가지로 모두 미니 앱을 2주만에 개발하여 Vue.js가 가장 좋다는 판단을 가지고 도전적으로 스택을 정하고 시작했습니다. 그렇게 2년 6개월동안 개발을 진행하고 지금은 정말 성공적으로 대한민국 전 비행단에 배포가 되어 전투기, 비행작전 등에 사용되고 있습니다. 이를 통해 안정성, 유지보수성, 성능면에서 MEVN 스택의 좋은 점을 증명했다는 점에서 성공적이라 할 수 있습니다. 
+항상 만들면서 Vue.js는 규모가 작은 곳에 서비스를 하는 데 쓴다. MongoDB는 성능이 좋지 않다. join도 되지 않는다. 라는 말을 들으면서 개발했습니다. 
+저는 Vue.js는 Vuex를 쓰면 충분히 큰 프로젝트에서도 가능하며 MongoDB는 json 포맷에 있어서는 SQL과 다르게 타입변환이라는 단계가 없어져 성능이 더 좋고 센서데이타를 주로 저장하는 이 프로젝트에는 이게 맞춤일 것이다 라는 제 판단을 근거로 개발해 나아갔습니다. 그저 주관적인 느낌이 아닌 정말 많은 공부와 연구를 토대, 그리고 직감으로 이어갔는데 그게 성공적으로 이어졌던 경험입니다. 
+프레임웍은 Vue.js, Express.js를 잘 다루며 라이브러리로는 D3.js를 잘 다룹니다. 
+
+### Q.  글로벌 서비스를 개발한다면 어떤 점이 중요하다고 생각하시는지 설명해주세요
+안정성, 유지보수성, 커스터마이징이 중요하다고 생각합니다. 첫째 모든 서비스는 그렇듯이 안정해야 합니다. 서버가 죽는 것을 대비해야 하며 죽지 않게 들어오는 나가는 데이터에 관한 꼼꼼한 체크 등을 해야 합니다. 둘째는 유지보수성입니다. 글로벌 서비스라면 상상을 초월하는 다양한 요구사항이 들어올 것입니다. 이러한 것에 대한 것에 대해 잘 대처한다는 것은 유연하게 대처하는 것을 말합니다. 유연하게 대처하려면 빠르게 프로그램을 수정할 수 있게 만드는 유지보수성 증대에 많은 힘을 기울여야 합니다. 마지막은 커스터마이징입니다. 라인의 경우, 페이스북을 보면 각 나라의 언어로 개설이 되어있으며 카카오는 영어로만 서비스되고 있습니다. 커스터마이징화가 잘된 라인이 카카오보다 더 글로벌하다고 할 수 있습니다. 나라마다 문화도 다르고 다른 부분이 더 많을 것입니다. 그러한 것들을 이해하고 그 부분에 따른 커스터마이징화가 필요할 것입니다. 
