--- a/_posts/2019-06-30-MEVN교과서-(1).md
+++ b/_posts/2019-06-30-MEVN교과서-(1).md
@@ -53,18 +53,19 @@ excerpt: MEVN교과서 (1)
 
 ### 2.4. MongoDB
 - MongoDB의 구조
-- 서버 구축시 주의사항
+- MongoDB의 특징
+- MongoDB의 한계
 - Mongoose와 MongoDB node.js 드라이버 성능비교
-- CRUD 테스트 
+- MongoDB node.js 드라이버를 이용한 CRUD
 - aggregate와 mapReduce 성능비교
 - aggregate 예제, mapReduce 예제
 
 ## 3. 코드최적화와 패러다임
 ### 3.1 함수형프로그래밍
 - 함수형프로그래밍의 특징 
-
-### 3.2 CSS 최적화 
-### 3.3 자바스크립트 최적화  
+- 함수형프로그래밍 응용예제
+ 
+### 3.2 자바스크립트 최적화  
 - 함수선택, parsInt와 ~~의 성능비교
 - 함수선택, deepCopy 성능비교
 - 함수선택, includes, indexOf 성능비교
@@ -72,12 +73,11 @@ excerpt: MEVN교과서 (1)
 - 서버요청최적화 - minify와 HTTP2
 - 서버요청최적화 - 메모이제이션 
 - 로직최적화 : 피벗알고리즘, 시간복잡도 이미지리시트를 찾는 로직
-- 로직최적화 : 공간복잡도
-- 로직최적화
- - 시간복잡도와 공간복잡도
- - 서버요청최소화  
+- 로직최적화 : 서버요청최소화 
 - 페이지로드속도최적화 : LAZY load
 - 페이지로드속도최적화 : 이미지크기 축소 
+
+### 3.3 CSS 최적화 
 
 ## 4. 미술품 결제 사이트 제작  
 ### 4.1 아키텍처
