교과서 수정

--- a/_posts/2019-06-30-MEVN교과서-(4).md
+++ b/_posts/2019-06-30-MEVN교과서-(4).md
@@ -434,14 +434,14 @@ const delay = (val)=>{
     })
 }
 async function test3() {
-  var list = [1, 3, 5, 6, 7, 9];
+  const list = [1, 3, 5, 6, 7, 9];
   console.log(list)
   return _.map(list, async function(val, i) {
     console.log(val, i); // 1초씩 순차적으로 실행됨
     return await delay(val * 10); // 1초씩 순차적으로 실행되고 정상적으로 결과를 꺼냄
   });
 } 
-test3().then(function(result) {
+test3().then((result)=> {
   console.log(result);
   // [10, 30, 50, 60, 70, 90]
 });
@@ -461,7 +461,7 @@ const users = [
     { id: 7, name: "HI", age: 24 }
   ];
 
-const a = _.reduce(users, function(info, user) {
+const a = _.reduce(users, (info, user)=> {
     const group = user.age - user.age % 10;
     info.count[group] = (info.count[group] || 0) + 1;
     info.total[group] = (info.total[group] || 0) + user.age;
@@ -476,7 +476,17 @@ console.log(a)
 사용하기도 편리하고 성능도 좋습니다. 앞으로 이어나갈 모든 코드들에는 fx.js가 포함될 예정입니다. 
 함수형 프로그래밍을 조금 더 알고 싶다면 [유인동의 함수형프로그래밍](https://www.inflearn.com/course/%ED%95%A8%EC%88%98%ED%98%95-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D/#) 을 보기를 권장드립니다.  
 
-### 3.2 자바스크립트 최적화  
+### 3.2 자바스크립트 최적화 
+자 우리는 하나의 패러다임 중 제가 추천하는 함수형프로그래밍을 살펴보았습니다. 그렇다면 자바스크립트의 최적화는 어떻게 진행이 될까요? 먼저 로직을 구성하는데 있어 어떤 것들을 맞추는 것이 중요합니다. 제가 생각하는 것들은 이러한 것이며 개인취향이 강하기 때문에 이런 것들은 팀원들과 상의 후 결정하면 됩니다. 이러한 것들이 미리 정해져 있는 eslint를 써서 정해도 됩니다.  
+
+1. 함수, 변수명은 카멜표기법을 사용합니다. 팟홀표기법(underbar 표기법)도 있지만 저는 이걸 추천합니다.  
+2. 간단하더라고 if { 중괄호를 사용해야 한다. 
+3. 문자열은 무조건 템플릿문자열을 사용해야 합니다.
+4. 한 컴포넌트, 모듈의 길이는 200줄 이하로 작성되어야 한다.
+5. 배열순회의 경우 for-in 루프를 쓰지 않습니다. (객체 속성순회일경우에는 씁니다.) 
+ - 인스턴스, 프로토타입 체인까지 검색하므로 느립니다.
+6. 정규표현식은 간단하게 씁니다. 예를 들어 ble|blue 대신 blu?e를 씁니다.
+
 ### 3.2.1 함수선택, parsInt와 ~~의 성능비교
 ### 3.2.2 함수선택, deepCopy 성능비교
 ### 3.2.3 함수선택, includes, indexOf 성능비교
